aside top complete

--- a/index.html
+++ b/index.html
@@ -12,18 +12,29 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./css/style.css">
-    <title></title>
+    <title>spotify</title>
 </head>
 
 <body>
     <div class="wrapper">
         <!-- MAIN -->
-        <main class="debug">
+        <main class="d-flex" >
             <nav>blablabla</nav>
             <section class="main-content">
-                <aside></aside>
+                <aside class="d-flex just-end aling-center">
+                    <div class="btn btn-white"><a href="" class="btn-a-white ">effettua l'upgrade</a></div>
+                </aside>
                 <section class="inner-content">
-                    
+                    <nav>
+                        <ul>
+                            <li>IN EVIDENZA</li>
+                            <li>POPCAST</li>
+                            <li> CLASSIFICHE</li>
+                            <li> GENERI E MOOD</li>
+                            <li>NUOVE USCITE </li>
+                            <li>SCOPRI</li>
+                        </ul>
+                    </nav>
                 </section>
             </section>
         </main>
