--- a/index.html
+++ b/index.html
@@ -144,7 +144,41 @@
         </main>
     </div>
     <!-- FOOTER -->
-    <footer></footer>
+   <footer class="control-bar">
+        <div class="inner-control-bar d-flex">
+            <div class="inner-control-bar-sx d-flex">
+                <img src="./img/sinister.jpeg" alt="Sinister">
+                <div>
+                    <h3>Sinister</h3>
+                    <h5>Brano Nome</h5>
+                </div>
+                <div class="favourite">
+                    <i class="far fa-heart"></i>
+                    <i class="far fa-folder"></i>
+                </div>
+            </div>
+            <div class="inner-control-bar-center d-flex">
+                <div class="control d-flex">
+                    <i class="fas fa-random"></i>
+                    <i class="fas fa-step-backward"></i>
+                    <i class="play far fa-play-circle"></i>
+                    <i class="fas fa-step-forward"></i>
+                    <i class="fas fa-redo-alt"></i>
+                </div>
+                <div class="time-bar d-flex">
+                    <span>0:25</span>
+                    <div class="bar"><hr></div>
+                    <span>4:35</span>
+                </div>
+            </div>
+            <div class="inner-control-bar-dx d-flex">
+                <i class="fas fa-list"></i>
+                <i class="fas fa-desktop"></i>
+                <i class="fas fa-volume-up"></i>
+                <div class="vol"><hr></div>
+            </div>
+        </div>
+    </footer>
 </body>
 
 </html>
