media q nav main complete/ restart footer

--- a/index.html
+++ b/index.html
@@ -22,9 +22,11 @@
         <main class="d-flex">
 
             <nav class="d-flex">
-                <img src="./img/logo.svg" alt="Logo Spotify">
+                <img src="./img/logo.svg" class="logo-desktop" alt="Logo Spotify">
+                <img src="./img/logo-small.svg" class="logo-mobile" alt="Logo Spotify">
+
                 <ul class="menu">
-                    <li><svg class="menu-icon" viewBox="0 0 512 512" xmlns="http://www.w3.org/2000/svg">
+                    <li><svg class="menu-icon" id="home" viewBox="0 0 512 512" xmlns="http://www.w3.org/2000/svg">
                             <path
                                 d="M448 463.746h-149.333v-149.333h-85.334v149.333h-149.333v-315.428l192-111.746 192 110.984v316.19z"
                                 fill="" />
@@ -191,6 +193,8 @@
         </main>
     </div>
     <!-- FOOTER -->
+ 
+
     <footer class="control-bar">
         <div class="inner-control-bar d-flex">
             <div class="inner-control-bar-sx d-flex">
