--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
                         <h2>Recently played</h2>
                         <div class="d-flex">
                             <div class="card column">
-                                <div class="album"><img src="./img/metal_lifting.jpg" alt="heavy metal album"><div class="play-tast"><i class="fa-regular fa-circle-play"></i></div></div>
+                                <div class="album"><img src="./img/metal_lifting.jpg" alt="heavy metal album"><div class="play-tast"><a href="./pages/album.html"><i class="fa-regular fa-circle-play"></i></a></div></div>
                                 <span class="album-title bold">Heavy Metal</span>
                                 <span class="subtitle autor-gray">Subtitle</span>
                             </div>
